--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "localforage": "^1.10.0",
     "lucide-react": "^0.244.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0",
+    "sort-by": "^1.2.0",
     "tailwindcss-animate": "^1.0.6"
   },
   "devDependencies": {
