--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tabler/icons-react": "^2.38.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "localforage": "^1.10.0",
