--- a/package.json
+++ b/package.json
@@ -20,18 +20,21 @@
     "@tabler/icons-react": "^2.38.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
     "lucide-react": "^0.244.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.16.0",
     "sort-by": "^1.2.0",
     "tailwindcss-animate": "^1.0.6",
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.6",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
