--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tabler/icons-react": "^2.38.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "i18next": "^23.5.1",
     "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
     "lucide-react": "^0.244.0",
@@ -29,6 +30,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
+    "react-i18next": "^13.2.2",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.16.0",
     "sort-by": "^1.2.0",
